<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <EditText
        android:id="@+id/sUsernameEditText"
        android:layout_width="207dp"
        android:layout_height="56dp"
        android:layout_marginStart="102dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="102dp"
        android:foregroundGravity="center"
        android:text="@string/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullNameEditText" />

    <EditText
        android:id="@+id/sPasswordEditText"
        android:layout_width="207dp"
        android:layout_height="56dp"
        android:layout_marginStart="102dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="102dp"
        android:foregroundGravity="center"
        android:text="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sUsernameEditText" />

    <EditText
        android:id="@+id/sConfirmPasswordEditText"
        android:layout_width="207dp"
        android:layout_height="56dp"
        android:layout_marginStart="102dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="102dp"
        android:foregroundGravity="center"
        android:text="@string/conf_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sPasswordEditText" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="71dp"
        android:layout_marginStart="162dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="161dp"
        android:layout_marginBottom="74dp"
        android:backgroundTint="@color/theme_pink_1"
        android:text="@string/save"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneEditText" />

    <EditText
        android:id="@+id/phoneEditText"
        android:layout_width="207dp"
        android:layout_height="56dp"
        android:layout_marginStart="102dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="102dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/phone"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sConfirmPasswordEditText" />

    <EditText
        android:id="@+id/fullNameEditText"
        android:layout_width="207dp"
        android:layout_height="56dp"
        android:layout_marginStart="103dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="103dp"
        android:layout_marginBottom="26dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/full_name"
        app:layout_constraintBottom_toTopOf="@+id/sUsernameEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="169dp"
        android:layout_height="105dp"
        android:layout_marginStart="141dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="141dp"
        android:layout_marginBottom="29dp"
        android:background="@color/material_dynamic_neutral50"
        app:layout_constraintBottom_toTopOf="@+id/fullNameEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="44dp"
        android:background="@color/material_dynamic_neutral50"
        android:clickable="true"
        app:layout_constraintBottom_toTopOf="@+id/fullNameEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_input_add" />

</androidx.constraintlayout.widget.ConstraintLayout>